--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜登入</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-1de23126.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e80f7c9a.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-9dd6cfba.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-2b0357a3.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -53,7 +53,7 @@
                         <div class="mb-16">
                             <label for="singupEmail" class="form-label  d-flex justify-content-between">
                                 E-mail
-                                <span class="must">*必填</span>
+                                <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
                             <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
                             <div class="invalid-feedback">
@@ -63,7 +63,7 @@
                         <div class="mb-32">
                             <label for="singupPassword" class="form-label d-flex justify-content-between">
                                 密碼
-                                <span class="must">*必填</span>
+                                <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
                             <input type="password" class="form-control rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
                             <div class="invalid-feedback">
