Added Quote of Illustration

--- a/pages/findEmoThanks.html
+++ b/pages/findEmoThanks.html
@@ -66,6 +66,12 @@
                 <div class="col-3 d-flex justify-content-end align-items-center">
                     <img src="../assets/images/emoStory/lime-thanks.svg" alt="thanks myself">
                 </div>
+                <!-- 圖片引用來源 -->
+                <div class="text-end mb-64">
+                    <span class="text-gray-500 fs-11">
+                        Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
+                    </span>
+                </div>
             </div>
         </div>
     </main>
