--- a/pages/signup.html
+++ b/pages/signup.html
@@ -42,7 +42,7 @@
                                 請輸入正確的 e-mail 帳號
                             </div>
                         </div>
-                        <div class="mb-20">
+                        <div class="mb-16">
                             <label for="singupPassword" class="form-label d-flex justify-content-between">
                                 密碼
                                 <span class="text-pink-tint02 fs-9">*必填</span>
@@ -66,6 +66,16 @@
                             <!-- error msg -->
                             <div class="invalid-feedback">
                                 請設定符合密碼規則的密碼
+                            </div>
+                        </div>
+                        <div class="mb-20">
+                            <label for="singupAccount" class="form-label  d-flex justify-content-between">
+                                用戶名稱
+                                <span class="text-pink-tint02 fs-9">*必填</span>
+                            </label>
+                            <input type="text" class="form-control rounded-pill px-20" id="singupAccount" placeholder="wavemocards" required>
+                            <div class="invalid-feedback">
+                                只能輸入英文和數字
                             </div>
                         </div>
                         <div class="mb-20 row">
