--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-9dd6cfba.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2b0357a3.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0ca79656.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -51,8 +51,8 @@
             <h2>找尋我的情緒</h2>
           </div>
   
-          <!-- 導覽說明 -->
           <div class="row justify-content-between align-items-center">
+            <!-- 導覽說明 -->
             <div class="col-6">
               <div class="h-100 px-24 py-24 rounded-3 bg-main-tint03 fs-7 text-gray-700">
                 <p class="mb-12">你在情緒的世界裡迷航了嗎？</p>
@@ -62,14 +62,20 @@
                 <p>如果準備好了的話，請點擊右方「分類探索」，開始探索情緒浪潮吧！</p>
               </div>
             </div>
-            <div class="col-6 d-flex justify-content-center">
-              <a class="w-75 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
+            <!-- 分類探索 -->
+            <div class="col-6 d-flex flex-column align-items-center">
+              <a class="mt-8 w-75 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
                 <h2 class="w-50 me-36 text-nowrap text-center text-main fs-2">分類探索</h2>
                 <div style="width: 50%;">
                   <img src="/wavemocards/assets/findEmoClassified-7f2a59f1.svg" alt="分類探索">
                 </div>
               </a>
+              <!-- 圖片引用來源 -->
+              <span class="text-gray-500 fs-11">
+                Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
+            </span>
             </div>
+            
           </div>
         </div>
       </div>
