--- a/findEmoThanks.html
+++ b/findEmoThanks.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜我的情緒強度2nd</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-9dd6cfba.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2b0357a3.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0ca79656.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -98,6 +98,12 @@
                 </div>
                 <div class="col-3 d-flex justify-content-end align-items-center">
                     <img src="/wavemocards/assets/lime-thanks-243bb175.svg" alt="thanks myself">
+                </div>
+                <!-- 圖片引用來源 -->
+                <div class="text-end mb-64">
+                    <span class="text-gray-500 fs-11">
+                        Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
+                    </span>
                 </div>
             </div>
         </div>
