--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜註冊</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-9dd6cfba.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2b0357a3.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-0ca79656.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -60,7 +60,7 @@
                                 請輸入正確的 e-mail 帳號
                             </div>
                         </div>
-                        <div class="mb-20">
+                        <div class="mb-16">
                             <label for="singupPassword" class="form-label d-flex justify-content-between">
                                 密碼
                                 <span class="text-pink-tint02 fs-9">*必填</span>
@@ -84,6 +84,16 @@
                             <!-- error msg -->
                             <div class="invalid-feedback">
                                 請設定符合密碼規則的密碼
+                            </div>
+                        </div>
+                        <div class="mb-20">
+                            <label for="singupAccount" class="form-label  d-flex justify-content-between">
+                                用戶名稱
+                                <span class="text-pink-tint02 fs-9">*必填</span>
+                            </label>
+                            <input type="text" class="form-control rounded-pill px-20" id="singupAccount" placeholder="wavemocards" required>
+                            <div class="invalid-feedback">
+                                只能輸入英文和數字
                             </div>
                         </div>
                         <div class="mb-20 row">
