--- a/pages/account.html
+++ b/pages/account.html
@@ -35,29 +35,29 @@
                     </div>
                     <div class="col-7">
                         <span class="mb-8 text-gray-700">Email</span>
-                        <p class="mb-24 fs-6 fw-bold">wavemo@gmail.com</p>
+                        <p class="ms-4 mb-24 fs-6 fw-bold">wavemo@gmail.com</p>
                         <span class="mb-8 text-gray-700">密碼</span>
-                        <p class="mb-24 fs-6 fw-bold">********</p>
+                        <p class="ms-4 mb-24 fs-6 fw-bold">********</p>
                         <span class="mb-8 text-gray-700">用戶名稱</span>
-                        <p class="mb-24 fs-6 fw-bold">wavemo</p>
+                        <p class="ms-4 mb-24 fs-6 fw-bold">wavemo</p>
                         <div class="row">
                             <div class="col-6">
                                 <span class="mb-8 text-gray-700">姓</span>
-                                <p class="mb-24 fs-6 fw-bold">陳</p>
+                                <p class="ms-4 mb-24 fs-6 fw-bold">陳</p>
                             </div>
                             <div class="col-6">
                                 <span class="mb-8 text-gray-700">名</span>
-                                <p class="mb-24 fs-6 fw-bold">浪潮</p>
+                                <p class="ms-4 mb-24 fs-6 fw-bold">浪潮</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6">
                                 <span class="mb-8 text-gray-700">生日</span>
-                                <p class="mb-24 fs-6 fw-bold">2023 / 01 / 15</p>
+                                <p class="ms-4 mb-24 fs-6 fw-bold">2023 / 01 / 15</p>
                             </div>
                             <div class="col-6">
                                 <span class="mb-8 text-gray-700">身份</span>
-                                <p class="mb-24 fs-6 fw-bold">學生</p>
+                                <p class="ms-4 mb-24 fs-6 fw-bold">學生</p>
                             </div>
                         </div>
                     </div>
