--- a/signup.html
+++ b/signup.html
@@ -130,10 +130,10 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <label for="singupBirthday" class="form-label d-flex justify-content-between">
+                                <label for="singupTitle" class="form-label d-flex justify-content-between">
                                     身份
                                 </label>
-                                <select class="form-select px-20 rounded-pill" aria-label="Default select example" id="singupBirthday">
+                                <select class="form-select px-20 rounded-pill" aria-label="Default select example" id="singupTitle">
                                     <option value="學生">學生</option>
                                     <option value="教師">教師</option>
                                     <option value="教師">輔導教師</option>
