--- a/pages/accountModify.html
+++ b/pages/accountModify.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>浪潮情緒卡｜我的帳號</title>
+        <title>浪潮情緒卡｜我的帳戶</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     </head>
@@ -15,7 +15,7 @@
             <div class="container py-16 mb-48">
                 <!-- title bar -->
                 <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
-                    <h2 class="fs-3">我的帳號</h2>
+                    <h2 class="fs-3">我的帳戶</h2>
                     <div class="nav-btn d-flex justify-content-end">
                         <a class="ms-16 btn btn-outline-main c-btn" href="account.html">取消</a>
         <form action="" method="post">
