--- a/accountMyFriends.html
+++ b/accountMyFriends.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>浪潮情緒卡｜我的帳戶</title>
+        <title>浪潮情緒卡｜我的帳號</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
       <script type="module" crossorigin src="/wavemocards/assets/main-0ca79656.js"></script>
@@ -48,53 +48,26 @@
             <div class="container py-16 mb-48">
                 <!-- title bar -->
                 <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
-                    <h2 class="fs-3">我的帳戶</h2>
+                    <h2 class="fs-3">我的帳戶｜好友管理</h2>
                     <div class="nav-btn d-flex justify-content-end">
-                        <a class="ms-16 btn btn-outline-main c-btn" href="accountModify.html">編輯</a>
-                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="accountMyFriends.html">好友管理</a>
+                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="account.html">帳戶管理</a>
                     </div>
                 </div>
 
                 <!-- content -->
-                <div class="row justify-content-between">
-                    <div class="col-4">
-                        <img class="mb-16" src="/wavemocards/assets/account_illu-9a12c639.svg" alt="account illustration">
-                        <!-- 圖片引用來源 -->
-                        <div class="mb-64">
+                <div class="my-72 d-flex justify-content-center">
+                    <img class="me-40 mb-16" src="/wavemocards/assets/rocket-0f863241.svg" alt="rocket">
+                    <div class="d-flex flex-column justify-content-center text-gray-700">
+                        <p class="mb-16 fs-2 fw-bold">此功能尚未開放......Sorry！</p>
+                        <p class="mb-40 fs-2 fw-bold">正在火速開發中！敬請期待！</p>
+                        <div class="text-end">
                             <span class="text-gray-500 fs-11">
                                 Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
                             </span>
                         </div>
                     </div>
-                    <div class="col-7">
-                        <span class="mb-8 text-gray-700">Email</span>
-                        <p class="ms-4 mb-24 fs-6 fw-bold">wavemo@gmail.com</p>
-                        <span class="mb-8 text-gray-700">密碼</span>
-                        <p class="ms-4 mb-24 fs-6 fw-bold">********</p>
-                        <span class="mb-8 text-gray-700">用戶名稱</span>
-                        <p class="ms-4 mb-24 fs-6 fw-bold">wavemo</p>
-                        <div class="row">
-                            <div class="col-6">
-                                <span class="mb-8 text-gray-700">姓</span>
-                                <p class="ms-4 mb-24 fs-6 fw-bold">陳</p>
-                            </div>
-                            <div class="col-6">
-                                <span class="mb-8 text-gray-700">名</span>
-                                <p class="ms-4 mb-24 fs-6 fw-bold">浪潮</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-6">
-                                <span class="mb-8 text-gray-700">生日</span>
-                                <p class="ms-4 mb-24 fs-6 fw-bold">2023 / 01 / 15</p>
-                            </div>
-                            <div class="col-6">
-                                <span class="mb-8 text-gray-700">身份</span>
-                                <p class="ms-4 mb-24 fs-6 fw-bold">學生</p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
+
             </div>
         </main>
         
