--- a/pages/findEmoFree.html
+++ b/pages/findEmoFree.html
@@ -12,7 +12,7 @@
         <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
-            <div class="container py-16 mb-48">
+            <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- 標題 -->
                 <div class="titleBar d-flex justify-content-between align-items-center">
                     <h2>找尋我的情緒｜自由探索</h2>
@@ -61,6 +61,8 @@
                 </div>
             </div>
         </main>
+
+        <%- include('./layout/floatButton') -%>
 
         <%- include('./layout/footer'); -%>
         <%- include('./layout/modalEmoCards'); -%>
