--- a/pages/findEmoRelived.html
+++ b/pages/findEmoRelived.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- title bar -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>安心</h2>
@@ -89,6 +89,8 @@
             </div>
         </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
