--- a/pages/sharedByOthers.html
+++ b/pages/sharedByOthers.html
@@ -11,7 +11,7 @@
     <body>
         <%- include('./layout/headerLoggedIn'); -%>
         <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- 標題 -->
             <div class="titleBar">
                 <h2>共享紀錄｜他人的分享</h2>
@@ -191,7 +191,7 @@
                 </div>
             </div>
     </main>
-
+    <%- include('./layout/floatButton') -%>
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
