--- a/pages/accountMyFriends.html
+++ b/pages/accountMyFriends.html
@@ -12,7 +12,7 @@
         <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
-            <div class="container py-16 mb-48">
+            <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
                 <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
                     <h2 class="fs-3">我的帳戶｜好友管理</h2>
@@ -37,6 +37,8 @@
 
             </div>
         </main>
+
+        <%- include('./layout/floatButton') -%>
         
         <%- include('./layout/footer'); -%>
 
