--- a/pages/addEmoCard.html
+++ b/pages/addEmoCard.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- 標題欄 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>新增情緒卡</h2>
@@ -82,6 +82,8 @@
             </div>
         </div>
     </main>
+    
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
 
