--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLoggedIn'); -%>
     <main>
-      <div class="container py-16">
+      <div class="container py-16 pt-72" id="top">
         <!-- 標題 -->
         <div class="titleBar d-flex justify-content-between align-items-center">
           <h2>認識情緒</h2>
@@ -246,6 +246,8 @@
         </div>
       </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
 
     <%- include('./layout/modalEmoCards'); -%>
     
