--- a/pages/emoCardsHappy.html
+++ b/pages/emoCardsHappy.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-      <div class="container py-16">
+      <div class="container py-16 pt-72" id="top">
         <div class="titleBar d-flex justify-content-between align-items-center">
           <h2>快樂</h2>
           <div class="nav-btn d-flex justify-content-end">
@@ -65,6 +65,8 @@
         </div>
       </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
