--- a/pages/findEmoBackground.html
+++ b/pages/findEmoBackground.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
                 <div class="progressBar mt-16 mb-8 px-12">
@@ -88,6 +88,8 @@
             </div>
         </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
 
