--- a/pages/findEmoClassified.html
+++ b/pages/findEmoClassified.html
@@ -12,7 +12,7 @@
         <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
-            <div class="container py-16">
+            <div class="container py-16 pt-72" id="top">
                 <!-- 標題 -->
                 <div class="titleBar d-flex justify-content-between align-items-center">
                     <h2>找尋我的情緒｜分類探索</h2>
@@ -566,6 +566,8 @@
                 </div>
             </div>
         </main>
+
+        <%- include('./layout/floatButton') -%>
 
         <%- include('./layout/footer'); -%>
         <%- include('./layout/modalEmoCardsPlus'); -%>
