--- a/pages/findEmoHappy.html
+++ b/pages/findEmoHappy.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- title bar -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>快樂</h2>
@@ -98,6 +98,8 @@
             </div>
         </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
