--- a/pages/findEmoStrength1st.html
+++ b/pages/findEmoStrength1st.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16 mb-48">
+        <div class="container py-16 mb-48 pt-72" id="top">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
                 <div class="progressBar mt-16 mb-8 px-12">
@@ -195,6 +195,8 @@
             </form>
         </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCards'); -%>
