--- a/pages/findMyEmotions.html
+++ b/pages/findMyEmotions.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main style="min-height: 90vh;">
-      <div class="container py-16 mb-48">
+      <div class="container py-16 mb-48 pt-72" id="top">
           <!-- 標題欄 -->
           <div class="titleBar d-flex justify-content-between align-items-center">
             <h2>找尋我的情緒</h2>
@@ -47,6 +47,8 @@
         </div>
       </div>
     </main>
+
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
 
