--- a/pages/modifyEmoCard.html
+++ b/pages/modifyEmoCard.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- 標題欄 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>編輯情緒卡</h2>
@@ -79,7 +79,7 @@
             </div>
         </div>
     </main>
-    
+    <%- include('./layout/floatButton') -%>
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
