--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -12,7 +12,7 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
                 <div class="progressBar mt-16 mb-8 px-12">
@@ -70,7 +70,7 @@
         
         </div>
     </main>
-    
+    <%- include('./layout/floatButton') -%>
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsCross'); -%>
 
