--- a/pages/myRecordsAnalyze.html
+++ b/pages/myRecordsAnalyze.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLoggedIn'); -%>
     <main>
-        <div class="container py-16">
+        <div class="container py-16 pt-72" id="top">
             <!-- 標題 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>我的紀錄｜分析</h2>
@@ -73,7 +73,7 @@
 
         </div>
 </main>
-
+<%- include('./layout/floatButton') -%>
 <%- include('./layout/footer'); -%>
 
 <script type="module" src="../main.js"></script>
