--- a/pages/myRecordsEmoStory.html
+++ b/pages/myRecordsEmoStory.html
@@ -12,7 +12,7 @@
         <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
-            <div class="container py-16 mb-48">
+            <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
                 <div class="mb-8 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
                     <h2 class="fs-3">我的紀錄｜情緒故事</h2>
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </main>
-        
+        <%- include('./layout/floatButton') -%>
         <%- include('./layout/footer'); -%>
 
         <script type="module" src="../main.js"></script>
