--- a/pages/myRecordsEmoStoryModify.html
+++ b/pages/myRecordsEmoStoryModify.html
@@ -12,7 +12,7 @@
         <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
-            <div class="container py-16 mb-48">
+            <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
                 <form action="" method="">
                     <div class="titleBar d-flex justify-content-between align-items-center">
@@ -115,7 +115,7 @@
                 </form>
             </div>
         </main>
-        
+        <%- include('./layout/floatButton') -%>
         <%- include('./layout/footer'); -%>
 
         <script type="module" src="../main.js"></script>
