--- a/pages/sharedByOthersEmoStory.html
+++ b/pages/sharedByOthersEmoStory.html
@@ -12,7 +12,7 @@
         <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
-            <div class="container py-16 mb-48">
+            <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
                 <div class="titleBar d-flex justify-content-between align-items-center">
                     <h2>他人的分享｜情緒故事</h2>
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </main>
-        
+        <%- include('./layout/floatButton') -%>
         <%- include('./layout/footer'); -%>
 
         <script type="module" src="../main.js"></script>
