--- a/accountMyFriends.html
+++ b/accountMyFriends.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
     </head>
     <body>
-        <header class="header h-logined sticky-top">
+        <header class="header h-logined fixed-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
             <a href="home.html" id="home">浪潮情緒卡</a>
@@ -45,7 +45,7 @@
     </div>
 </header>
         <main>
-            <div class="container py-16 mb-48">
+            <div class="container py-16 mb-48 pt-72" id="top">
                 <!-- title bar -->
                 <div class="mb-36 pt-32 pb-8 d-flex justify-content-between align-items-center border-2 border-bottom border-main-tint02">
                     <h2 class="fs-3">我的帳戶｜好友管理</h2>
@@ -70,7 +70,17 @@
 
             </div>
         </main>
-        
+
+        <!-- 浮動按鈕 -->
+<div class="fixed-bottom">
+    <div class="me-8 mb-12 d-flex justify-content-end">
+        <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
+        style="width: 60px; height: 60px;">
+                <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
+                <span class="text-white fs-10 fw-bold">TOP</span>
+        </a>
+    </div>
+</div>        
         <footer class="footer py-48">
     <div class="container">
         <div class="row gap-40">
