--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/wavemocards/assets/main-80634b30.css">
   </head>
   <body>
-    <header class="header h-logined sticky-top">
+    <header class="header h-logined fixed-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1>
             <a href="home.html" id="home">浪潮情緒卡</a>
