--- a/pages/findEmoClassified.html
+++ b/pages/findEmoClassified.html
@@ -567,7 +567,7 @@
             </div>
         </main>
 
-        <%- include('./layout/floatButton') -%>
+        <%- include('./layout/floatButtons') -%>
 
         <%- include('./layout/footer'); -%>
         <%- include('./layout/modalEmoCardsPlus'); -%>
