--- a/pages/findEmoClassifiedExpand.html
+++ b/pages/findEmoClassifiedExpand.html
@@ -690,7 +690,7 @@
         </div>
     </main>
 
-    <%- include('./layout/floatButton') -%>
+    <%- include('./layout/floatButtons') -%>
 
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
