--- a/pages/findEmoExpectation.html
+++ b/pages/findEmoExpectation.html
@@ -72,7 +72,7 @@
         </div>
     </main>
 
-    <%- include('./layout/floatButton') -%>
+    <%- include('./layout/floatButtons') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
