--- a/pages/findEmoHappy.html
+++ b/pages/findEmoHappy.html
@@ -99,7 +99,7 @@
         </div>
     </main>
 
-    <%- include('./layout/floatButton') -%>
+    <%- include('./layout/floatButtons') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
