--- a/pages/findEmoRelived.html
+++ b/pages/findEmoRelived.html
@@ -90,7 +90,7 @@
         </div>
     </main>
 
-    <%- include('./layout/floatButton') -%>
+    <%- include('./layout/floatButtons') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
