--- a/pages/findEmoStrength2nd.html
+++ b/pages/findEmoStrength2nd.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container py-16 mb-48 pt-72" id="top">
             <!-- process bar -->
-            <div class="d-flex justify-content-end">
+            <div class="mt-24 d-flex justify-content-end">
                 <div class="progressBar mt-16 mb-8 px-12">
                     <div class="position-relative m-4">
                         <div class="progress" style="height: 2px;">
