--- a/findEmoHate.html
+++ b/findEmoHate.html
@@ -143,7 +143,12 @@
 
     <!-- 浮動按鈕 -->
 <div class="fixed-bottom">
-    <div class="me-8 mb-12 d-flex justify-content-end">
+    <div class="me-8 mb-12 d-flex flex-column justify-content-end align-items-end">
+        <a href="myEmoCardsHolder.html" type="button" class="mb-8 btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center link-white"
+        style="width: 60px; height: 60px;">
+                <i class="bi bi-folder-fill"></i>
+                <span class="fs-10 fw-bold">卡夾</span>
+        </a>
         <a href="#top" type="button" class="btn btn-main-tint01 rounded-circle shadow d-flex flex-column justify-content-center align-items-center"
         style="width: 60px; height: 60px;">
                 <img src="/wavemocards/assets/backToTop-1ea21c73.svg" alt="top">
